--- a/my-project/package.json
+++ b/my-project/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "aos": "^2.3.4",
     "tailwindcss-inner-border": "^0.2.0",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
