--- a/my-project/package.json
+++ b/my-project/package.json
@@ -9,10 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "aos": "^2.3.4",
     "tailwindcss-inner-border": "^0.2.0",
-    "vue": "^3.2.47",
-    "vue-router": "^4.0.13"
+    "vue": "^3.2.47"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
@@ -20,7 +18,6 @@
     "postcss": "^8.4.21",
     "sass": "^1.59.3",
     "tailwindcss": "^3.2.7",
-    "vite": "^4.2.0",
-    "vite-plugin-svg-sprite-component": "^1.0.10"
+    "vite": "^4.2.0"
   }
 }
